--- a/DSImager.Application/App.xaml
+++ b/DSImager.Application/App.xaml
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Application xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Application xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:fa="http://schemas.fontawesome.io/icons/">
     <!-- StartupUri="MainWindow.xaml" -->
     <Application.Resources>
         <ResourceDictionary>
@@ -10,7 +11,15 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Red.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseDark.xaml" />
             </ResourceDictionary.MergedDictionaries>
-            <FontFamily x:Key="FontAwesome">/Resources/Font/#FontAwesome</FontFamily>            
+            <FontFamily x:Key="FontAwesome">/Resources/Font/#FontAwesome</FontFamily>
+            <Style TargetType="{x:Type fa:ImageAwesome}">
+                <Setter Property="Foreground" Value="White"/>
+                <Style.Triggers>
+                    <Trigger Property="IsEnabled" Value="False">
+                        <Setter Property="Foreground" Value="#33FFFFFF"/>
+                    </Trigger>
+                </Style.Triggers>
+            </Style>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
