--- a/DSImager.Application/Views/MainWindow.xaml
+++ b/DSImager.Application/Views/MainWindow.xaml
@@ -88,7 +88,8 @@
                     Width="30"
                     Height="30"
 					Margin="4,0"
-					ToolTip="Temperature controls" Foreground="White">
+					ToolTip="Temperature controls" Foreground="White"
+                    Command="{Binding OpenTemperatureDialogCommand}">
                     <fa:ImageAwesome Icon="Fire"></fa:ImageAwesome>
                 </Button>
                 <Button FontFamily="{DynamicResource FontAwesome}"
